# Graduation-Project

./: CMakeLists.txt  LICENSE  README.md  config.hpp  main.cc  main.cpp  start.sh
bat/: bat.cc  bat.hpp
face/: face_api.cc  face_api.cpp  face_api.hpp
mutil_thread/: img_prod_cons.cpp  img_prod_cons.hpp  thread_main.cc
serial/include/: CRC_Check.h  serialport.h
serial/src/: CRC_Check.cpp  serialport.cpp
video/: RMVideoCapture.cpp  RMVideoCapture.h
